Fix homepage on Firefox

--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -4,6 +4,8 @@
     display: table;
     width: 100%;
     min-height: 100%;
+    height: 100%;
+
     background: #434343 url("pennies.jpg") no-repeat;
     background-size: cover;
     background-position: 0 -54px;
