--- a/scss/responsiveness.scss
+++ b/scss/responsiveness.scss
@@ -24,6 +24,7 @@
 
     .homepage {
         display: block;
+        height: auto;
         .pitch,.action {
             display: block;
             width: auto;
